crates/cherry-pit-core/tests/compile_fail/domain_event_requires_clone.stderr
error[E0277]: the trait bound `NotCloneable: Clone` is not satisfied
  --> tests/compile_fail/domain_event_requires_clone.rs:15:22
   |
15 | impl DomainEvent for NotCloneable {
   |                      ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NotCloneable`
   |
note: required by a bound in `DomainEvent`
  --> src/event.rs
   |
   | pub trait DomainEvent: Clone + Send + Sync + 'static + Serialize + DeserializeOwned {
   |                        ^^^^^ required by this bound in `DomainEvent`
help: consider annotating `NotCloneable` with `#[derive(Clone)]`
   |
11 + #[derive(Clone)]
12 | struct NotCloneable {
   |
